# Raytracer_cpp

./: CMakeLists.txt  main.cpp
debug/: Chronometer.cpp  Chronometer.h  Timer.cpp  Timer.h
geometry/: Box.cpp  Box.h  Color.cpp  Color.h  Intersect.h  Material.cpp  Material.h  Plane.cpp  Plane.h  Shape.cpp  Shape.h  Sphere.cpp  Sphere.h  Triangle.cpp  Triangle.h
math/: Matrix.cpp  Matrix.h  Ray.cpp  Ray.h  Renderer.cpp  Renderer.h  Vector.cpp  Vector.h
rendering/: Image.cpp  Image.h  Renderer.cpp  Renderer.h
world/: BoundingBox.cpp  BoundingBox.h  Camera.cpp  Camera.h  Light.cpp  Light.h  Material.cpp  Material.h  OBJLoader.cpp  Object.cpp  Object.h  Scene.cpp  Scene.h  Skybox.cpp  Skybox.h
